--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "moduleResolution": "NodeNext",
+    "lib": ["DOM.AsyncIterable"]
   },
   "exclude": ["node_modules"]
 }
